--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.5.2",
+    "vue-album": "^2.1.1",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
